manifests/app.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: my-nginx-app
  labels:
    istio-injection: enabled # This label enables Istio sidecar injection
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: my-nginx-app
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
        version: v1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: my-nginx-app
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: my-nginx-gateway
  namespace: my-nginx-app
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: my-nginx-virtualservice
  namespace: my-nginx-app
spec:
  hosts:
  - "*"
  gateways:
  - my-nginx-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-service.my-nginx-app.svc.cluster.local
        port:
          number: 80
        subset: blue
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-destination-rule
  namespace: my-nginx-app
spec:
  host: nginx-service.my-nginx-app.svc.cluster.local
  subsets:
  - name: blue
    labels:
      app: nginx
      version: v1
